[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgate"
version = "0.1.0"
description = "Local Python SDK for the AgentGate demo control plane"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28,<3",
    "urllib3<2",
]

[tool.setuptools.packages.find]
where = ["src"]
